Acabada la barra de menús principal

--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
 </head>
 
 <body id="page-top" class="bg-info">
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #FFF" id="mainNav">
-    <div class="nav container ml-0 mr-0" style="position: relative;">
-      <img class="pr-2 col-md-2" src="images/logo-menu.png" alt="Centre Mèdic Sabadell">
-      <div class="navbar-collapse nav-item col-md-8" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto mr-0">
+  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #FFF; width: 100%;" id="mainNav">
+    <div class="nav container-fluid ml-0 mr-0" style="position: relative; width: 100% !important;">
+      <img class="pr-2 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell">
+      <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+      <div class="collapse navbar-collapse nav-item width-75 bg-cms" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto mr-4">
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">El centre</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1">Filosofia</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">Notícies</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1">Area de Gestió</a></li>
         </ul>
       </div><!-- END nabarResponsive -->
-      <div class="pl-2 col-md-2" id="solicitarVisita">
-        Solicitar visita <br /> 93 123 45 67
+      <div class="pl-2 pr-2 mt-0 pt-0 width-15 text-right d-none d-lg-block bg-cms-light" id="solicitarVisita">
+        <p>
+          Solicitar visita<br /> 93 123 45 67
+        </p>
       </div>
     </div><!-- END container -->
   </nav><!-- END NAVBAR -->
