Afegida la segona navBar. Editats alguns estils.

--- a/index.html
+++ b/index.html
@@ -15,29 +15,50 @@
   <title>Centre Mèdic Sabadell</title>
 </head>
 
-<body id="page-top" class="bg-info">
-  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #FFF; width: 100%;" id="mainNav">
-    <div class="nav container-fluid ml-0 mr-0" style="position: relative; width: 100% !important;">
+<body id="page-top">
+  <nav class="navbar navbar-expand-md navbar-dark shadow" id="mainNav">
+    <div class="nav container-fluid ml-0 mr-0 pr-0" style="position: relative;" id="containerDiv">
       <img class="pr-2 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell">
-      <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
-      <div class="collapse navbar-collapse nav-item width-75 bg-cms" id="navbarResponsive">
+      <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i class="fa fa-bars"></i></button>
+      <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
         <ul class="navbar-nav ml-auto mr-4">
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">El centre</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1">Filosofia</a></li>
-          <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">Notícies</a></li>
+          <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">Noticies</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1">Area de Gestió</a></li>
         </ul>
-      </div><!-- END nabarResponsive -->
-      <div class="pl-2 pr-2 mt-0 pt-0 width-15 text-right d-none d-lg-block bg-cms-light" id="solicitarVisita">
+      </div><!-- END navbarResponsive -->
+      <div class="pr-0 mt-0 width-20 text-right d-none d-md-block bg-cms-light" id="solicitarVisita">
         <p>
-          Solicitar visita<br /> 93 123 45 67
+          Solicitar visita<br /> <strong>93 123 45 67</strong>
         </p>
+      </div><!-- END solicitarVisita -->
+    </div><!-- END container-fluid -->
+  </nav><!-- END mainNac -->
+  <nav id="secondaryNav" class="bg-cms-light">
+    <div class="centered">
+      <div><img src="images/especialitats.png" /><br />
+        <p>Especialitats</p>
       </div>
-    </div><!-- END container -->
-  </nav><!-- END NAVBAR -->
-
+      <div><img src="images/quadre-medic.png" /><br />
+        <p>Quadre mèdic</p>
+      </div>
+      <div><img src="images/mutues.png" /><br />
+        <p>Mutues</p>
+      </div>
+      <div><img src="images/unitat-estetica.png" /><br />
+        <p>Unitat estètica</p>
+      </div>
+      <div><img src="images/solicitar-visites.png" /><br />
+        <p>Solicitar visites</p>
+      </div>
+      <div><img src="images/contacte.png" /><br />
+        <p>Contacte</p>
+      </div>
+    </div>
+  </nav>
   <p>
-    Just some text
+
   </p>
   <footer>
     <ul>
