--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
   <link href="style.css" rel="stylesheet">
   <!-- <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"> -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-
   <title>Centre Mèdic Sabadell</title>
 </head>
 
 <body id="page-top">
   <nav class="navbar navbar-expand-md navbar-dark shadow" id="mainNav">
     <div class="nav container-fluid ml-0 mr-0 pr-0" style="position: relative;" id="containerDiv">
-      <img class="pr-2 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell">
+      <img class="pr-2 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell" id=logoCMS>
       <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
         <ul class="navbar-nav ml-auto mr-4">
@@ -28,14 +27,14 @@
           <li class="nav-item"><a href="#" class="navbar-brand mr-1">Area de Gestió</a></li>
         </ul>
       </div><!-- END navbarResponsive -->
-      <div class="pr-0 mt-0 width-20 text-right d-none d-md-block bg-cms-light" id="solicitarVisita">
+      <div class="pr-0 mt-0 width-15 text-right d-none d-md-block bg-cms-light" id="solicitarVisita">
         <p>
-          Solicitar visita<br /> <strong>93 123 45 67</strong>
+          Solicitar visita<br /> <strong>93 726 55 00</strong>
         </p>
       </div><!-- END solicitarVisita -->
     </div><!-- END container-fluid -->
   </nav><!-- END mainNac -->
-  <nav id="secondaryNav" class="bg-cms-light">
+  <nav id="secondaryNav" class="bg-cms-light ml-a">
     <div class="centered">
       <div><img src="images/especialitats.png" /><br />
         <p>Especialitats</p>
@@ -49,8 +48,8 @@
       <div><img src="images/unitat-estetica.png" /><br />
         <p>Unitat estètica</p>
       </div>
-      <div><img src="images/solicitar-visites.png" /><br />
-        <p>Solicitar visites</p>
+      <div><a href="http://www.centremedicsabadell.net/"><img src="images/solicitar-visites.png" /><br />
+        <p>Solicitar visites</p></a>
       </div>
       <div><img src="images/contacte.png" /><br />
         <p>Contacte</p>
@@ -61,15 +60,15 @@
 
   </p>
   <footer>
-    <ul>
+    <!-- <ul>
       <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
       <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
       <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li>
       <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-    </ul>
+    </ul> -->
     <copy>&copy; <script type="text/javascript">
         document.write(new Date().getFullYear())
-      </script> Servamedatabase</copy>
+      </script> Servamed</copy>
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
