--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <nav class="navbar navbar-expand-md navbar-dark shadow" id="mainNav">
     <div class="nav container-fluid ml-0 mr-0 pr-0" style="position: relative;" id="containerDiv">
       <img class="pr-2 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell" id=logoCMS>
-      <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i class="fa fa-bars"></i></button>
+      <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i
+          class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
         <ul class="navbar-nav ml-auto mr-4">
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">El centre</a></li>
@@ -36,9 +37,11 @@
   </nav><!-- END mainNac -->
   <nav id="secondaryNav" class="bg-cms-light ml-a">
     <div class="centered">
-      <div><img src="images/especialitats.png" /><br />
-        <p>Especialitats</p>
-      </div>
+      <a data-toggle="collapse" data-target="#collapseEspecialitats">
+        <div><img src="images/especialitats.png" /><br />
+          <p>Especialitats</p>
+        </div>
+      </a>
       <div><img src="images/quadre-medic.png" /><br />
         <p>Quadre mèdic</p>
       </div>
@@ -48,17 +51,42 @@
       <div><img src="images/unitat-estetica.png" /><br />
         <p>Unitat estètica</p>
       </div>
-      <div><a href="http://www.centremedicsabadell.net/"><img src="images/solicitar-visites.png" /><br />
-        <p>Solicitar visites</p></a>
-      </div>
+      <a href="http://www.centremedicsabadell.net/">
+        <div><img src="images/solicitar-visites.png" /><br />
+          <p>Solicitar visites</p>
+        </div>
+      </a>
       <div><img src="images/contacte.png" /><br />
         <p>Contacte</p>
       </div>
     </div>
   </nav>
-  <p>
-
-  </p>
+  <div class="collapse" id="collapseEspecialitats">
+    <div class="card card-body">
+      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+    </div>
+  </div>
+  <div id="carouselControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner" id="carousel-photos">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="images/pexels-photo-1.jpeg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/pexels-photo-2.jpeg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/pexels-photo-3.jpeg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
   <footer>
     <!-- <ul>
       <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -68,7 +96,7 @@
     </ul> -->
     <copy>&copy; <script type="text/javascript">
         document.write(new Date().getFullYear())
-      </script> Servamed</copy>
+      </script> Servamed, Ricard Mallafré</copy>
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
