--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
     </div>
   </div>
-  <div id="carouselControls" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" id="carousel-photos">
       <div class="carousel-item active">
         <img class="d-block w-100" src="images/pexels-photo-1.jpeg" alt="First slide">
