--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i
           class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto mr-4">
+        <ul class="navbar-nav ml-auto mr-4 mt-4">
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">El centre</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1">Filosofia</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">Noticies</a></li>
