--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <script language="javascript" type="text/javascript" src="index.js"></script>
+  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -25,7 +26,7 @@
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">El centre</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1">Filosofia</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">Noticies</a></li>
-          <li class="nav-item"><a href="#" class="navbar-brand mr-1">Area de Gestió</a></li>
+          <li class="nav-item"><a href="https://centremedicsabadell.net/centremedic" class="navbar-brand mr-1">Area de Gestió</a></li>
         </ul>
       </div><!-- END navbarResponsive -->
       <div class="pr-0 mt-0 width-15 text-right d-none d-md-block bg-cms-light" id="solicitarVisita">
@@ -38,25 +39,25 @@
   <nav id="secondaryNav" class="bg-cms-light ml-a">
     <div class="centered">
       <a data-toggle="collapse" data-target="#collapseEspecialitats">
-        <div><img src="images/especialitats.png" /><br />
+        <div><img src="images/navbarSecondary/especialitats.png" /><br />
           <p>Especialitats</p>
         </div>
       </a>
-      <div><img src="images/quadre-medic.png" /><br />
+      <div><img src="images/navbarSecondary/quadre-medic.png" /><br />
         <p>Quadre mèdic</p>
       </div>
-      <div><img src="images/mutues.png" /><br />
+      <div><img src="images/navbarSecondary/mutues.png" /><br />
         <p>Mutues</p>
       </div>
-      <div><img src="images/unitat-estetica.png" /><br />
+      <div><img src="images/navbarSecondary/unitat-estetica.png" /><br />
         <p>Unitat estètica</p>
       </div>
       <a href="http://www.centremedicsabadell.net/">
-        <div><img src="images/solicitar-visites.png" /><br />
+        <div><img src="images/navbarSecondary/solicitar-visites.png" /><br />
           <p>Solicitar visites</p>
         </div>
       </a>
-      <div><img src="images/contacte.png" /><br />
+      <div><img src="images/navbarSecondary/contacte.png" /><br />
         <p>Contacte</p>
       </div>
     </div>
@@ -69,13 +70,19 @@
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" id="carousel-photos">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="images/pexels-photo-1.jpeg" alt="First slide">
+        <img class="d-block w-100" src="images/carousel/DSC_0051.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="images/pexels-photo-2.jpeg" alt="Second slide">
+        <img class="d-block w-100" src="images/carousel/DSC_0063.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="images/pexels-photo-3.jpeg" alt="Third slide">
+        <img class="d-block w-100" src="images/carousel/entrada.jpg" alt="Fourth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/carousel/facana.jpg" alt="Fifth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/carousel/intervencions.jpg" alt="Sixth slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
