Typos and position

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div><!-- END navbarResponsive -->
       <div class="pr-0 mt-0 width-15 text-right d-none d-md-block bg-cms-light" id="solicitarVisita">
         <p>
-          Solicitar visita<br /> <strong>93 726 55 00</strong>
+          Sol·licitar visita<br /> <strong>93 726 55 00</strong>
         </p>
       </div><!-- END solicitarVisita -->
     </div><!-- END container-fluid -->
@@ -54,7 +54,7 @@
       </div>
       <a href="http://www.centremedicsabadell.net/">
         <div><img src="images/navbarSecondary/solicitar-visites.png" /><br />
-          <p>Solicitar visites</p>
+          <p>Sol·licitar visites</p>
         </div>
       </a>
       <div><img src="images/navbarSecondary/contacte.png" /><br />
