--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <li class="nav-item"><a href="https://centremedicsabadell.net/centremedic" class="navbar-brand mr-1">Area de Gestió</a></li>
         </ul>
       </div><!-- END navbarResponsive -->
-      <div class="pr-0 mt-0 width-15 text-right d-none d-md-block bg-cms-light" id="solicitarVisita">
+      <div class="pr-0 mt-0 width-15 text-left d-none d-md-block bg-cms-light" id="solicitarVisita">
         <p>
-          Sol·licitar visita<br /> <strong>93 726 55 00</strong>
+          <span class="text-muted">Sol·licitar visita:</span><br /> <strong>93 726 55 00</strong>
         </p>
       </div><!-- END solicitarVisita -->
     </div><!-- END container-fluid -->
