--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div><!-- END solicitarVisita -->
     </div><!-- END container-fluid -->
   </nav><!-- END mainNac -->
-  <nav id="secondaryNav" class="bg-cms-light ml-a">
+  <nav id="secondaryNav" class="bg-cms-light m-a">
     <div class="container">
       <div class="row">
         <div class="col-sm centered">
