--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <nav class="navbar navbar-expand-md navbar-dark shadow" id="mainNav">
     <div class="nav container-fluid ml-0 mr-0 pr-0" style="position: relative;" id="containerDiv">
       <img class="pr-2 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell" id=logoCMS>
-      <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i class="fa fa-bars"></i></button>
+      <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i
+          class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
         <ul class="navbar-nav ml-auto mr-4 mt-4">
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">El centre</a></li>
@@ -43,44 +44,55 @@
       </div><!-- END solicitarVisita -->
     </div><!-- END container-fluid -->
   </nav><!-- END mainNac -->
-  <nav id="secondaryNav" class="bg-cms-light m-a">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm centered">
-          <a data-toggle="collapse" data-target="#collapseEspecialitats">
-            <div><img src="images/navbarSecondary/especialitats.png" /><br />
-              <p>Especialitats</p>
+  <nav id="secondaryNav" class="navbar navbar-expand-lg bg-cms-light m-a">
+    <div class="nav container-fluid ml-4 mr-0 pr-0" style="position: relative;" id="containerDiv">
+      <button class="text-cms-light navbar-toggler navbar-toggler-right bg-cms ml-4" type="button" data-toggle="collapse" data-target="#secondaryNavResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation"
+        id="menuButton2"><i class="fa fa-bars"></i></button>
+      <div class="collapse navbar-collapse nav-item" id="secondaryNavResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <div class="centered highlight-on-hover nav-item">
+              <a data-toggle="collapse" data-target="#collapseEspecialitats">
+                <img src="images/navbarSecondary/especialitats.png" /><br />
+                <p>Especialitats</p>
+              </a>
             </div>
-          </a>
-        </div>
-        <div class="col-sm centered">
-          <div><img src="images/navbarSecondary/quadre-medic.png" /><br />
-            <p>Quadre mèdic</p>
-          </div>
-        </div>
-        <div class="col-sm centered">
-          <div><img src="images/navbarSecondary/mutues.png" /><br />
-            <p>Mutues</p>
-          </div>
-        </div>
-        <div class="col-sm centered">
-          <div><img src="images/navbarSecondary/unitat-estetica.png" /><br />
-            <p>Unitat estètica</p>
-          </div>
-        </div>
-        <div class="col-sm centered">
-          <a href="http://www.centremedicsabadell.net/">
-            <div><img src="images/navbarSecondary/solicitar-visites.png" /><br />
-              <p>Sol·licitar visites</p>
+          </li>
+          <li class="nav-item">
+            <div class="centered highlight-on-hover nav-item">
+              <img src="images/navbarSecondary/quadre-medic.png" /><br />
+              <p>Quadre mèdic</p>
             </div>
-          </a></div>
-        <div class="col-sm centered">
-          <a href="#infoContacte" id="anchorContacte" class="js-scroll-trigger">
-            <div><img src="images/navbarSecondary/contacte.png" /><br />
-              <p>Contacte</p>
+          </li>
+          <li class="nav-item">
+            <div class="centered highlight-on-hover nav-item">
+              <img src="images/navbarSecondary/mutues.png" /><br />
+              <p>Mutues</p>
             </div>
-          </a>
-        </div>
+          </li>
+          <li class="nav-item">
+            <div class="centered highlight-on-hover nav-item">
+              <img src="images/navbarSecondary/unitat-estetica.png" /><br />
+              <p>Unitat estètica</p>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="centered highlight-on-hover nav-item">
+              <a href="http://www.centremedicsabadell.net/">
+                <img src="images/navbarSecondary/solicitar-visites.png" /><br />
+                <p>Sol·licitar visites</p>
+              </a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="centered highlight-on-hover nav-item">
+              <a href="#infoContacte" id="anchorContacte" class="js-scroll-trigger">
+                <img src="images/navbarSecondary/contacte.png" /><br />
+                <p>Contacte</p>
+              </a>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
