--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         </p>
       </div><!-- END solicitarVisita -->
     </div><!-- END container-fluid -->
-  </nav><!-- END mainNac -->
-  <nav id="secondaryNav" class="navbar navbar-expand-lg bg-cms-light m-a">
-    <div class="nav container-fluid ml-4 mr-0 pr-0" style="position: relative;" id="containerDiv">
+  </nav><!-- END mainNav -->
+  <nav class="navbar navbar-expand-lg bg-cms-light m-a" id="secondaryNav">
+    <div class="nav container-fluid m-a p-a" style="position: relative; width: 95%;" id="containerDivSecondaryNav">
       <button class="text-cms-light navbar-toggler navbar-toggler-right bg-cms ml-4" type="button" data-toggle="collapse" data-target="#secondaryNavResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation"
-        id="menuButton2"><i class="fa fa-bars"></i></button>
+        id="menuButtonSecondaryNav"><i class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item" id="secondaryNavResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -95,7 +95,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> <!-- END secondaryNav-->
   <div class="collapse" id="collapseEspecialitats">
     <div class="card card-body">
       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
