--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 </head>
 
 <body id="page-top">
-  <nav class="navbar navbar-expand-md navbar-dark shadow" id="mainNav">
-    <div class="nav container-fluid ml-0 mr-0 pr-0" style="position: relative;" id="containerDiv">
-      <img class="pr-2 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell" id=logoCMS>
+  <nav class="navbar navbar-expand-lg navbar-dark shadow" id="mainNav">
+    <div class="nav container-fluid ml-0 mr-0 pr-0"  id="containerDiv">
+      <img class="pr-4 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell" id=logoCMS>
       <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i
           class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
@@ -44,23 +44,23 @@
       </div><!-- END solicitarVisita -->
     </div><!-- END container-fluid -->
   </nav><!-- END mainNav -->
-  <nav class="navbar navbar-expand-lg bg-cms-light m-a" id="secondaryNav">
-    <div class="nav container-fluid m-a p-a" style="position: relative; width: 95%;" id="containerDivSecondaryNav">
+  <nav class="navbar navbar-expand-lg bg-cms-light" id="secondaryNav">
+    <div class="nav container-fluid bg-light p-0 m-0" style="position: relative; width: 100%;" id="containerDivSecondaryNav">
       <button class="text-cms-light navbar-toggler navbar-toggler-right bg-cms ml-4" type="button" data-toggle="collapse" data-target="#secondaryNavResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation"
         id="menuButtonSecondaryNav"><i class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item" id="secondaryNavResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <div class="centered highlight-on-hover nav-item">
+            <div class="centered mt-2 highlight-on-hover nav-item">
               <a data-toggle="collapse" data-target="#collapseEspecialitats">
-                <img src="images/navbarSecondary/especialitats.png" /><br />
+                <span style="color: #8bc7ea;"><i class="fas fa-medkit fa-2x"></i></span><br />
                 <p>Especialitats</p>
               </a>
             </div>
           </li>
           <li class="nav-item">
-            <div class="centered highlight-on-hover nav-item">
-              <img src="images/navbarSecondary/quadre-medic.png" /><br />
+            <div class="centered mt-2 highlight-on-hover nav-item">
+              <i class="fas fa-stethoscope fa-2x"></i><br />
               <p>Quadre mèdic</p>
             </div>
           </li>
