--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Cabin:700|Lora:400,400i,700" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
@@ -27,7 +28,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark shadow" id="mainNav">
     <div class="nav container-fluid ml-0 mr-0 pr-0"  id="containerDiv">
       <img class="pr-4 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell" id=logoCMS>
-      <button class="navbar-toggler navbar-toggler-right bg-cms" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i
+      <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i
           class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
         <ul class="navbar-nav ml-auto mr-4 mt-4">
@@ -37,7 +38,7 @@
           <li class="nav-item"><a href="https://centremedicsabadell.net/centremedic" class="navbar-brand mr-1">Area de Gestió</a></li>
         </ul>
       </div><!-- END navbarResponsive -->
-      <div class="pr-0 mt-0 width-15 text-left d-none d-md-block bg-cms-light" id="solicitarVisita">
+      <div class="pr-0 mt-0 width-15 text-left d-none d-lg-block bg-cms-light" id="solicitarVisita">
         <p>
           <span class="text-muted">Sol·licitar visita:</span><br /> <strong>93 726 55 00</strong>
         </p>
@@ -45,49 +46,49 @@
     </div><!-- END container-fluid -->
   </nav><!-- END mainNav -->
   <nav class="navbar navbar-expand-lg bg-cms-light" id="secondaryNav">
-    <div class="nav container-fluid bg-light p-0 m-0" style="position: relative; width: 100%;" id="containerDivSecondaryNav">
+    <div class="nav container-fluid bg-light" id="containerDivSecondaryNav">
       <button class="text-cms-light navbar-toggler navbar-toggler-right bg-cms ml-4" type="button" data-toggle="collapse" data-target="#secondaryNavResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation"
         id="menuButtonSecondaryNav"><i class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item" id="secondaryNavResponsive">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ">
           <li class="nav-item">
-            <div class="centered mt-2 highlight-on-hover nav-item">
+            <div class="highlight-on-hover nav-item">
               <a data-toggle="collapse" data-target="#collapseEspecialitats">
-                <span style="color: #8bc7ea;"><i class="fas fa-medkit fa-2x"></i></span><br />
+                <i class="text-cms-light fas fa-stethoscope fa-2x"></i><br />
                 <p>Especialitats</p>
               </a>
             </div>
           </li>
           <li class="nav-item">
-            <div class="centered mt-2 highlight-on-hover nav-item">
-              <i class="fas fa-stethoscope fa-2x"></i><br />
+            <div class="highlight-on-hover nav-item">
+              <i class="text-cms-light fas fa-user-nurse fa-2x"></i><br />
               <p>Quadre mèdic</p>
             </div>
           </li>
           <li class="nav-item">
-            <div class="centered highlight-on-hover nav-item">
-              <img src="images/navbarSecondary/mutues.png" /><br />
+            <div class="highlight-on-hover nav-item">
+              <i class="text-cms-light far fa-building fa-2x"></i><br />
               <p>Mutues</p>
             </div>
           </li>
           <li class="nav-item">
-            <div class="centered highlight-on-hover nav-item">
-              <img src="images/navbarSecondary/unitat-estetica.png" /><br />
+            <div class="highlight-on-hover nav-item">
+            <i class="text-cms-light fas fa-adjust fa-2x"></i><br />
               <p>Unitat estètica</p>
             </div>
           </li>
           <li class="nav-item">
-            <div class="centered highlight-on-hover nav-item">
+            <div class="highlight-on-hover nav-item">
               <a href="http://www.centremedicsabadell.net/">
-                <img src="images/navbarSecondary/solicitar-visites.png" /><br />
+                <i class="text-cms-light far fa-clipboard fa-2x"></i><br />
                 <p>Sol·licitar visites</p>
               </a>
             </div>
           </li>
           <li class="nav-item">
-            <div class="centered highlight-on-hover nav-item">
+            <div class="highlight-on-hover nav-item">
               <a href="#infoContacte" id="anchorContacte" class="js-scroll-trigger">
-                <img src="images/navbarSecondary/contacte.png" /><br />
+                <i class="text-cms-light fas fa-phone fa-2x"></i><br />
                 <p>Contacte</p>
               </a>
             </div>
