--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
+    integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Cabin:700|Lora:400,400i,700" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <!-- <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"> -->
@@ -26,16 +29,18 @@
 
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark shadow" id="mainNav">
-    <div class="nav container-fluid ml-0 mr-0 pr-0"  id="containerDiv">
+    <div class="nav container-fluid ml-0 mr-0 pr-0" id="containerDiv">
       <img class="pr-4 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell" id=logoCMS>
-      <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton"><i
-          class="fa fa-bars"></i></button>
+      <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false"
+        aria-label="Toggle navigation" id="menuButton"><i class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
         <ul class="navbar-nav ml-auto mr-4 mt-4">
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">El centre</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1">Filosofia</a></li>
           <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">Noticies</a></li>
-          <li class="nav-item"><a href="https://centremedicsabadell.net/centremedic" class="navbar-brand mr-1">Area de Gestió</a></li>
+          <li class="nav-item"><a href="https://centremedicsabadell.net/centremedic" class="navbar-brand mr-1">Area de
+              Gestió</a></li>
         </ul>
       </div><!-- END navbarResponsive -->
       <div class="pr-0 mt-0 width-15 text-left d-none d-lg-block bg-cms-light" id="solicitarVisita">
@@ -47,8 +52,10 @@
   </nav><!-- END mainNav -->
   <nav class="navbar navbar-expand-lg bg-cms-light" id="secondaryNav">
     <div class="nav container-fluid bg-light" id="containerDivSecondaryNav">
-      <button class="text-cms-light navbar-toggler navbar-toggler-right bg-cms ml-4" type="button" data-toggle="collapse" data-target="#secondaryNavResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation"
-        id="menuButtonSecondaryNav"><i class="fa fa-bars"></i></button>
+      <button class="text-cms-light navbar-toggler navbar-toggler-right bg-cms ml-4" type="button"
+        data-toggle="collapse" data-target="#secondaryNavResponsive" aria-controls="navbarResponse"
+        aria-expanded="false" aria-label="Toggle navigation" id="menuButtonSecondaryNav"><i
+          class="fa fa-bars"></i></button>
       <div class="collapse navbar-collapse nav-item" id="secondaryNavResponsive">
         <ul class="navbar-nav ">
           <li class="nav-item">
@@ -73,7 +80,7 @@
           </li>
           <li class="nav-item">
             <div class="highlight-on-hover nav-item">
-            <i class="text-cms-light fas fa-adjust fa-2x"></i><br />
+              <i class="text-cms-light fas fa-adjust fa-2x"></i><br />
               <p>Unitat estètica</p>
             </div>
           </li>
@@ -99,7 +106,8 @@
   </nav> <!-- END secondaryNav-->
   <div class="collapse" id="collapseEspecialitats">
     <div class="card card-body">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
+      keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
     </div>
   </div>
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -140,12 +148,14 @@
           <img class="bg-light br-5 p-2" src="images/logo-menu.png" alt="Logo CMS">
         </div>
         <div class="col-sm">
+
           <p class="text-left-align" id="infoContacte">
-            <h4>Informació de Contacte:</h4>
+            <h4 class="text-muted">Informació de Contacte:</h4>
             <br>
-            Carrer de Parre Sallarès
-            <br>
-            08201, Sabadell
+            <a href="https://goo.gl/maps/K65LNsJTPHKqen846">
+              Carrer de Parre Sallarès, 8
+              <br>
+              08201, Sabadell</a>
             <br>
             <strong>93 726 55 00</strong>
           </p>
@@ -163,8 +173,12 @@
       </script> Servamed, Ricard Mallafré</copy>
   </footer>
   <script src="js/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
   <script src="js/jquery.easing.min.js"></script>
   <script src="index.js"></script>
 </body>
