--- a/index.html
+++ b/index.html
@@ -50,60 +50,59 @@
       </div><!-- END solicitarVisita -->
     </div><!-- END container-fluid -->
   </nav><!-- END mainNav -->
-  <nav class="navbar navbar-expand-lg bg-cms-light" id="secondaryNav">
-    <div class="nav container-fluid bg-light" id="containerDivSecondaryNav">
-      <button class="text-cms-light navbar-toggler navbar-toggler-right bg-cms ml-4" type="button"
-        data-toggle="collapse" data-target="#secondaryNavResponsive" aria-controls="navbarResponse"
-        aria-expanded="false" aria-label="Toggle navigation" id="menuButtonSecondaryNav"><i
-          class="fa fa-bars"></i></button>
-      <div class="collapse navbar-collapse nav-item" id="secondaryNavResponsive">
-        <ul class="navbar-nav ">
-          <li class="nav-item">
-            <div class="highlight-on-hover nav-item">
-              <a data-toggle="collapse" data-target="#collapseEspecialitats">
-                <i class="text-cms-light fas fa-stethoscope fa-2x"></i><br />
-                <p>Especialitats</p>
-              </a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <div class="highlight-on-hover nav-item">
-              <i class="text-cms-light fas fa-user-nurse fa-2x"></i><br />
-              <p>Quadre mèdic</p>
-            </div>
-          </li>
-          <li class="nav-item">
-            <div class="highlight-on-hover nav-item">
-              <i class="text-cms-light far fa-building fa-2x"></i><br />
-              <p>Mutues</p>
-            </div>
-          </li>
-          <li class="nav-item">
-            <div class="highlight-on-hover nav-item">
-              <i class="text-cms-light fas fa-adjust fa-2x"></i><br />
-              <p>Unitat estètica</p>
-            </div>
-          </li>
-          <li class="nav-item">
-            <div class="highlight-on-hover nav-item">
-              <a href="http://www.centremedicsabadell.net/">
-                <i class="text-cms-light far fa-clipboard fa-2x"></i><br />
-                <p>Sol·licitar visites</p>
-              </a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <div class="highlight-on-hover nav-item">
-              <a href="#infoContacte" id="anchorContacte" class="js-scroll-trigger">
-                <i class="text-cms-light fas fa-phone fa-2x"></i><br />
-                <p>Contacte</p>
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="secondaryNav">
+    <button class="text-cms-light bg-cms ml-2 mt-2 navbar-toggler" type="button" data-toggle="collapse"
+      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <i class="fa fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <div class="highlight-on-hover nav-item">
+            <a data-toggle="collapse" data-target="#collapseEspecialitats">
+              <i class="text-cms-light fas fa-stethoscope fa-2x"></i><br />
+              <p>Especialitats</p>
+            </a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="highlight-on-hover nav-item">
+            <i class="text-cms-light fas fa-user-nurse fa-2x"></i><br />
+            <p>Quadre mèdic</p>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <div class="highlight-on-hover nav-item">
+            <i class="text-cms-light far fa-building fa-2x"></i><br />
+            <p>Mutues</p>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="highlight-on-hover nav-item">
+            <i class="text-cms-light fas fa-adjust fa-2x"></i><br />
+            <p>Unitat estètica</p>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="highlight-on-hover nav-item">
+            <a href="http://www.centremedicsabadell.net/">
+              <i class="text-cms-light far fa-clipboard fa-2x"></i><br />
+              <p>Sol·licitar visites</p>
+            </a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="highlight-on-hover nav-item">
+            <a href="#infoContacte" id="anchorContacte" class="js-scroll-trigger">
+              <i class="text-cms-light fas fa-phone fa-2x"></i><br />
+              <p>Contacte</p>
+            </a>
+          </div>
+        </li>
+      </ul>
     </div>
-  </nav> <!-- END secondaryNav-->
+  </nav>
   <div class="collapse" id="collapseEspecialitats">
     <div class="card card-body">
       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
