Les navbar ja funcionen!
Les navbar ara ja funcionen en tots els tamanys de pantalla. Finally!!!

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <div class="highlight-on-hover nav-item">
-            <a data-toggle="collapse" data-target="#collapseEspecialitats">
+          <a data-toggle="collapse" data-target="#collapseEspecialitats">
+            <div class="highlight-on-hover nav-item">
               <i class="text-cms-light fas fa-stethoscope fa-2x"></i><br />
               <p>Especialitats</p>
-            </a>
-          </div>
+            </div>
+          </a>
         </li>
         <li class="nav-item">
           <div class="highlight-on-hover nav-item">
@@ -85,12 +85,12 @@
           </div>
         </li>
         <li class="nav-item">
-          <div class="highlight-on-hover nav-item">
-            <a href="http://www.centremedicsabadell.net/">
+          <a href="http://www.centremedicsabadell.net/">
+            <div class="highlight-on-hover nav-item">
               <i class="text-cms-light far fa-clipboard fa-2x"></i><br />
               <p>Sol·licitar visites</p>
-            </a>
-          </div>
+            </div>
+          </a>
         </li>
         <li class="nav-item">
           <div class="highlight-on-hover nav-item">
@@ -152,9 +152,12 @@
             <h4 class="text-muted">Informació de Contacte:</h4>
             <br>
             <a href="https://goo.gl/maps/K65LNsJTPHKqen846">
-              Carrer de Parre Sallarès, 8
-              <br>
-              08201, Sabadell</a>
+              <div>
+                Carrer de Parre Sallarès, 8
+                <br>
+                08201, Sabadell
+              </div>
+            </a>
             <br>
             <strong>93 726 55 00</strong>
           </p>
