--- a/index.html
+++ b/index.html
@@ -59,41 +59,41 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a data-toggle="collapse" data-target="#collapseEspecialitats">
-            <div class="highlight-on-hover nav-item">
+          <a data-toggle="collapse" data-target="#collapseEspecialitats" onclick="getEspecialitats();">
+            <div class="nav-item">
               <i class="text-cms-light fas fa-stethoscope fa-2x"></i><br />
               <p>Especialitats</p>
             </div>
           </a>
         </li>
         <li class="nav-item">
-          <div class="highlight-on-hover nav-item">
+          <div class="nav-item">
             <i class="text-cms-light fas fa-user-nurse fa-2x"></i><br />
             <p>Quadre mèdic</p>
           </div>
         </li>
         <li class="nav-item dropdown">
-          <div class="highlight-on-hover nav-item">
+          <div class="nav-item">
             <i class="text-cms-light far fa-building fa-2x"></i><br />
             <p>Mutues</p>
           </div>
         </li>
         <li class="nav-item">
-          <div class="highlight-on-hover nav-item">
+          <div class="nav-item">
             <i class="text-cms-light fas fa-adjust fa-2x"></i><br />
             <p>Unitat estètica</p>
           </div>
         </li>
         <li class="nav-item">
           <a href="http://www.centremedicsabadell.net/">
-            <div class="highlight-on-hover nav-item">
+            <div class="nav-item">
               <i class="text-cms-light far fa-clipboard fa-2x"></i><br />
               <p>Sol·licitar visites</p>
             </div>
           </a>
         </li>
         <li class="nav-item">
-          <div class="highlight-on-hover nav-item">
+          <div class="nav-item">
             <a href="#infoContacte" id="anchorContacte" class="js-scroll-trigger">
               <i class="text-cms-light fas fa-phone fa-2x"></i><br />
               <p>Contacte</p>
@@ -104,7 +104,7 @@
     </div>
   </nav>
   <div class="collapse" id="collapseEspecialitats">
-    <div class="card card-body">
+    <div class="card card-body" id="bodyEspecialitats">
       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
       keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
     </div>
@@ -182,6 +182,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
   <script src="js/jquery.easing.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="index.js"></script>
 </body>
 
