--- a/index.html
+++ b/index.html
@@ -104,10 +104,7 @@
     </div>
   </nav>
   <div class="collapse" id="collapseEspecialitats">
-    <div class="card card-body" id="bodyEspecialitats">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
-      keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-    </div>
+    <div class="card card-body" data-is-loaded="false" id="bodyEspecialitats"></div>
   </div>
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" id="carousel-photos">
