--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a data-toggle="collapse" data-target="#collapseEspecialitats" onclick="getEspecialitats();">
+          <a data-toggle="collapse" data-target="#collapseEspecialitats" onclick="requestEspecialitats();">
             <div class="nav-item">
               <i class="text-cms-light fas fa-stethoscope fa-2x"></i><br />
               <p>Especialitats</p>
@@ -104,7 +104,8 @@
     </div>
   </nav>
   <div class="collapse" id="collapseEspecialitats">
-    <div class="card card-body" data-is-loaded="false" id="bodyEspecialitats"></div>
+    <div class="card card-body" data-is-loaded="false" id="bodyEspecialitats">
+    </div>
   </div>
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" id="carousel-photos">
