--- a/index.html
+++ b/index.html
@@ -107,32 +107,34 @@
     <div class="card card-body" data-is-loaded="false" id="bodyEspecialitats">
     </div>
   </div>
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" id="carousel-photos">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="images/carousel/DSC_0051.jpg" alt="Slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="images/carousel/DSC_0063.jpg" alt="Slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="images/carousel/entrada.jpg" alt="Slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="images/carousel/facana.jpg" alt="Slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="images/carousel/intervencions.jpg" alt="Slide">
+  <div class="wrapper" id="body-wrapper">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner" id="carousel-photos">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="images/carousel/DSC_0051.jpg" alt="Slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/carousel/DSC_0063.jpg" alt="Slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/carousel/entrada.jpg" alt="Slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/carousel/facana.jpg" alt="Slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/carousel/intervencions.jpg" alt="Slide">
+        </div>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div id="block-collaboration-cliniques">
+      <div id="collaboration-cliniques-title" class="bg-cms">
+        <p>Clíninques <strong>col·laboradores</strong></p>
+      </div>
+      <div id="collaboration-cliniques-images" class="bg-cms-light">
+        <p>Imatges clíniques</p>
+      </div>
+    </div>
   </div>
   <footer>
     <div class="container">
