--- a/src/index.html
+++ b/src/index.html
@@ -3,28 +3,24 @@
 
 <head>
   <meta charset="utf-8">
-  <script language="javascript" type="text/javascript" src="index.js"></script>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <title>Centre Mèdic Sabadell</title>
+
+
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
     integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous">
   </script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Cabin:700|Lora:400,400i,700" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
-  <!-- <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"> -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-  <!-- <script>
-    $("#anchorContacte").click(function() {
-      $([document.documentElement, document.body]).animate({
-        scrollTop: $("#infoContacte").offset().top
-      }, 2000);
-    });
-    </script> -->
-  <title>Centre Mèdic Sabadell</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Cabin:700|Lora:400,400i,700" rel="stylesheet">
+
+
+
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -174,6 +170,8 @@
         document.write(new Date().getFullYear())
       </script> Servamed, Ricard Mallafré</copy>
   </footer>
+
+  
   <script src="js/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
