Kind of fixed the cliniques colaboradores slide in

--- a/src/index.html
+++ b/src/index.html
@@ -123,9 +123,9 @@
         </div>
       </div>
     </div>
-    <div id="block-collaboration-cliniques">
-      <div id="collaboration-cliniques-title" class="bg-cms">
-        <p>Clíninques <strong>col·laboradores</strong></p>
+    <div id="block-collaboration-cliniques" class="bg-cms">
+      <div id="collaboration-cliniques-title">
+        <p>Clíniques <strong>col·laboradores</strong></p>
       </div>
       <div id="collaboration-cliniques-images" class="bg-cms-light">
         <p>Imatges clíniques</p>
