Changed the interval between slides in the carousel

--- a/src/index.html
+++ b/src/index.html
@@ -109,19 +109,19 @@
     <div class="wrapper" id="body-wrapper">
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" id="carousel-photos">
-          <div class="carousel-item active">
+          <div class="carousel-item active" data-interval="10000">
             <img class="d-block w-100" src="images/carousel/DSC_0051.jpg" alt="Slide">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="2500">
             <img class="d-block w-100" src="images/carousel/DSC_0063.jpg" alt="Slide">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="2500">
             <img class="d-block w-100" src="images/carousel/entrada.jpg" alt="Slide">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="2500">
             <img class="d-block w-100" src="images/carousel/facana.jpg" alt="Slide">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="2500">
             <img class="d-block w-100" src="images/carousel/intervencions.jpg" alt="Slide">
           </div>
         </div>
