Afegida la web del Centre

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         </button>
         <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
           <ul class="navbar-nav ml-auto mr-4 mt-4">
-            <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">El centre</a></li>
+            <li class="nav-item"><a href="el-centre.html" class="navbar-brand mr-1 js-scroll-trigger">El centre</a></li>
             <li class="nav-item"><a href="#" class="navbar-brand mr-1">Filosofia</a></li>
             <li class="nav-item"><a href="#" class="navbar-brand mr-1 js-scroll-trigger">Noticies</a></li>
             <li class="nav-item"><a href="https://centremedicsabadell.net/centremedic" class="navbar-brand mr-1">Area de
