Added vendor specific prefixes in the CSS file (autoprefixer). Autoformatted all the files.

--- a/src/el-centre.html
+++ b/src/el-centre.html
@@ -86,7 +86,7 @@
               <a href="http://www.centremedicsabadell.net/">
                 <div class="nav-item">
                   <i class="text-cms-light far fa-clipboard fa-2x"></i><br/>
-                  <p>Sol·licitar visites</p>
+                  <p>Sol·licitar visita</p>
                 </div>
               </a>
             </li>
@@ -107,7 +107,7 @@
 
       <div class="p-3" id="body-container">
         <div class="container">
-          <div class="row mb-4" id="first-row">
+          <div class="row my-250" id="first-row">
             <div class="col">
               <div class="row">
                 <div class="col">
@@ -124,7 +124,7 @@
             </div>
           </div>
           <!-- END first row (Qui som?) -->
-          <div class="row mb-4" id="entrada-exterior">
+          <div class="row my-250" id="entrada-exterior">
             <div class="col-6">
               <div class="row">
                 <div class="col title">
@@ -145,13 +145,13 @@
         </div>
         <!-- END first container -->
         <div class="no-gutters">
-          <div class="row  mt-4 mb-4">
+          <div class="row">
             <div class="col img-hover-zoom-container">
               <div id="exterior"></div>
             </div>
           </div>
         </div>
-        <div class="container my-50">
+        <div class="container my-250">
           <div class="row mb-4" id="entrada-exterior">
             <div class="col-6 my-auto">
               <div class="row">
