Fixed Home link in both pages (CMS logo top left corner).

--- a/src/el-centre.html
+++ b/src/el-centre.html
@@ -18,7 +18,7 @@
     <div class="container-fluid m-0 p-0">
       <nav class="navbar navbar-expand-lg navbar-dark shadow" id="mainNav">
         <div class="nav container-fluid ml-0 mr-0 pr-0" id="containerDiv">
-          <a href="index.html"><img class="pr-4 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell" id="logoCMS"></a>
+          <a href="index.html" id="home-link"></a>
           <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation" id="menuButton">
             <i class="fa fa-bars"></i>
           </button>
