--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <div class="container-fluid m-0 p-0">
     <nav class="navbar navbar-expand-lg navbar-dark shadow" id="mainNav">
       <div class="nav container-fluid ml-0 mr-0 pr-0" id="containerDiv">
-        <img class="pr-4 width-10" src="images/logo-menu.png" alt="Centre Mèdic Sabadell" id="logoCMS">
+        <a href="index.html" id="home-link"></a>
         <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse"
           data-target="#navbarResponsive" aria-controls="navbarResponse" aria-expanded="false"
           aria-label="Toggle navigation" id="menuButton">
@@ -33,16 +33,7 @@
         <div class="collapse navbar-collapse nav-item width-70 bg-cms text-left" id="navbarResponsive">
           <ul class="navbar-nav ml-auto mr-4 mt-4">
             <li class="nav-item">
-              <div class="nav-item">
-                <i class="text-cms-light fas fa-user-nurse fa-2x"></i><br/>
-                <p>Quadre mèdic</p>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <div class="nav-item">
-                <i class="text-cms-light far fa-building fa-2x"></i><br/>
-                <p>Mútues</p>
-              </div>
+              <a href="el-centre.html" class="navbar-brand mr-1">El centre</a>
             </li>
             <li class="nav-item">
               <a href="#" class="navbar-brand mr-1">Filosofia</a>
