Fixed the secondary navbar to be centered

--- a/src/el-centre.html
+++ b/src/el-centre.html
@@ -55,7 +55,7 @@
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav m-auto">
             <li class="nav-item active">
               <a data-toggle="collapse" data-target="#collapseEspecialitats" onclick="requestEspecialitats();">
                 <div class="nav-item">
