Typo fixed in el-centre.html about mutues

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
           <li class="nav-item dropdown">
             <div class="nav-item">
               <i class="text-cms-light far fa-building fa-2x"></i><br />
-              <p>Mutues</p>
+              <p>Mútues</p>
             </div>
           </li>
           <li class="nav-item">
