SupportedContent navbar was not updated

--- a/el-centre.html
+++ b/el-centre.html
@@ -56,31 +56,31 @@
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse navbar-supported-content" id="navbarSupportedContent">
-          <div class="nav-item active" data-toggle="collapse" data-target="#collapseEspecialitats" onclick="requestEspecialitats();">
-            <i class="text-cms-light fas fa-stethoscope fa-2x"></i><br />
+          <div class="nav-item text-cms-light active" data-toggle="collapse" data-target="#collapseEspecialitats" onclick="requestEspecialitats();">
+            <i class="fas fa-stethoscope fa-2x"></i><br />
             <p>Especialitats</p>
           </div>
-          <div class="nav-item">
-            <i class="text-cms-light fas fa-user-nurse fa-2x"></i><br />
+          <div class="nav-item text-cms-light">
+            <i class="fas fa-user-nurse fa-2x"></i><br />
             <p>Quadre mèdic</p>
           </div>
-          <div class="nav-item">
-            <i class="text-cms-light far fa-building fa-2x"></i><br />
+          <div class="nav-item text-cms-light">
+            <i class="far fa-building fa-2x"></i><br />
             <p>Mútues</p>
           </div>
-          <div class="nav-item">
-            <i class="text-cms-light fas fa-adjust fa-2x"></i><br />
+          <div class="nav-item text-cms-light">
+            <i class="fas fa-adjust fa-2x"></i><br />
             <p>Unitat estètica</p>
           </div>
-          <div class="nav-item">
-            <a href="http://www.centremedicsabadell.net/">
-              <i class="text-cms-light fas fa-clipboard fa-2x"></i><br/>
+          <div class="nav-item text-cms-light">
+            <a href="http://www.centremedicsabadell.net/" class="text-cms-light">
+              <i class="far fa-clipboard fa-2x"></i><br/>
               <p>Sol·licitar visita</p>
             </a>
           </div>
-          <div class="nav-item">
-            <a href="#infoContacte">
-              <i class="text-cms-light fas fa-phone fa-2x"></i><br/>
+          <div class="nav-item text-cms-light">
+            <a href="#infoContacte" class="text-cms-light">
+              <i class="fas fa-phone fa-2x"></i><br/>
               <p>Contacte</p>
             </a>
           </div>
