--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body id="page-top">
   <div class="page-container">
-    <div class="container-fluid content-wrapper m-0 pl-0">
+    <div class="container-fluid content-wrapper m-0 px-0">
       <nav class="navbar navbar-expand-lg navbar-dark shadow main-nav">
         <div class="nav container-fluid ml-0 mr-0 pr-0">
           <a href="index.html" class="home-link"></a>
@@ -146,7 +146,7 @@
         </div>
       </div>
       <!-- <ul> <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li> </ul> -->
-      <div class="bg-cms w-100">&copy;
+      <div class="bg-cms w-100 py-2">&copy;
         <script type="text/javascript">
           document.write(new Date().getFullYear());
 
