--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <i class="fa fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse width-70 bg-cms text-left stripe" id="main-nav-responsive">
-            <ul class="navbar-nav ml-auto mr-4 mt-4">
+            <ul class="navbar-nav ml-auto mr-md-0 mr-lg-4 mt-lg-4">
               <li class="hli">
                 <a href="el-centre.html" class="mr-1">El centre</a>
               </li>
@@ -50,8 +50,8 @@
         <!-- END container-fluid -->
       </nav>
       <!-- END mainNav -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light m-0 p-0">
-        <button class="text-cms-light bg-cms ml-2 mt-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-supported-content" aria-controls="navbar-supported-content" aria-expanded="false" aria-label="Toggle navigation">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light m-0 p-lg-0 py-md-1">
+        <button class="text-cms-light bg-cms ml-2 my-1 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-supported-content" aria-controls="navbar-supported-content" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse my-1 navbar-supported-content" id="navbar-supported-content">
